--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ input, button, textarea, select {
   font: inherit;
 }
 /* 8. Avoid text overflows */
-p, h1, h2, h3, h4, h5, h6, label, input, ol, ul, li, span {
+p, h1, h2, h3, h4, h5, h6, label, input, ol, ul, li, span, button {
   font-family: "Roboto", sans-serif;
   overflow-wrap: break-word;
 }
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5, h6 {
 :root {
   --orange: hsl(13, 98%, 62%);
   --red: hsl(4, 100%, 67%);
+  --red-gray: hsl(4, 80%, 67%);
   --blue-800: hsl(234, 29%, 20%);
   --blue-700: hsl(235, 18%, 26%);
   --grey: hsl(0, 0%, 58%);
@@ -97,6 +98,7 @@ main {
 
 .newsletter__headline {
   font-size: 2.5rem;
+  line-height: normal;
 }
 
 .newsletter__list {
@@ -173,7 +175,68 @@ main {
 
 .newsletter__form input[type="submit"]:active, .newsletter__form input[type="submit"]:focus, .newsletter__form input[type="submit"]:hover {
   background: linear-gradient(90deg, var(--red), var(--orange));
-  box-shadow: 4px 8px 12px var(--red);
+  box-shadow: 4px 8px 12px var(--red-gray);
+}
+
+.newsletter__article--success {
+  display: none;
+  flex-direction: column;
+  gap: 1.25rem;
+  height: 100%;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 1.25rem;
+}
+
+.newsletter__article--success.showSuccessModal {
+  display: flex;
+}
+
+.newsletter__article--signup.hideSignupModal {
+  display: none;
+}
+
+.newsletter__image--success {
+  margin-block-start: auto;
+  max-width: 60px;
+}
+
+.newsletter__headline--success {
+  margin-top: 0.5rem;
+}
+
+.newsletter__button--success {
+  background-color: var(--blue-800);
+  border: none;
+  border-radius: 0.5rem;
+  color: var(--white);
+  cursor: pointer;
+  margin-block-start: auto;
+  padding: 0.875rem;
+  width: 100%;
+}
+
+.newsletter__button--success:active, .newsletter__button--success:focus, .newsletter__button--success:hover {
+  background: linear-gradient(90deg, var(--red), var(--orange));
+  box-shadow: 4px 8px 12px var(--red-gray);
+}
+
+.user_email {
+  font-weight: 700;
+}
+
+@media only screen and (min-width: 48rem) {
+  .newsletter__article.newsletter__article--success {
+    align-items: flex-start;
+    border-radius: 1.5rem;
+    flex-direction: column;
+    max-width: 500px;
+    padding: 3.25rem;
+  }
+
+  .newsletter__article.newsletter__article--success {
+    min-height: auto;
+  }
 }
 
 @media only screen and (min-width: 64rem) {
